Rewrite Vicent's bio in English.

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </section>
             <section>
                 <h1>Who are we?</h1>
+                <img style="float:right; height: 400px;" src="img/paella-vicent.jpg" />
                 <h2>Vicent Soria</h2>
                 <ul>
                     <li><a href="https://twitter.com/vicentgodella">@vicentgodella</a></li>
-                    <li>Valenciano de nacimiento, <br />viviendo en Barcelona</li>
-                    <li>Cervecero casero</li>
-                    <li>Panadero casero</li>
+                    <li>I'm Valencian, <br />but I live in Catalonia</li>
+                    <li>Home brewer</li>
+                    <li>Home baker</li>
                 </ul>
-                <img style="float:right; height: 300px;" src="img/paella-vicent.jpg" />
             </section>
             <section>
 
