--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                 <h2>Hands on</h2>
 
                 <ul>
-                    <li>It's time for you to finish our onboarding guide deploying our application.</li>
+                    <li>It's time for you to finish our onboarding guide <a href="https://docs.google.com/document/d/1UPvkDRZf2vsWqJzSFu8UOfkcXqOu_mpWDDFXLnthSPM/edit?usp=sharing">deploying our application.</a></li>
                 </ul>
 
                 <p><a href="https://github.com/friends-of-scalability/url-shortener">https://github.com/friends-of-scalability/url-shortener</a></p>
@@ -709,7 +709,7 @@
                     <li>TLS termination (HTTP/2)</li>
                     <li>Observability
                     </li>
-                    <li>Security and DoS mitigation
+                    <li>Security and DoS mitigation (L4)
                     </li>
                 </ul>
             </section>
@@ -719,7 +719,7 @@
 
                 <ul>
                     <li>Round Robin</li>
-                    <li>IP:hash</li>
+                    <li>IP:hash (consistent hashing)</li>
                     <li>Least conn</li>
                     <li>Least latency</li>
                     <li>Weighted Round Robin, Weighted least conn</li>
@@ -1264,7 +1264,7 @@
 
 
             <section>
-                <h3>You have read a lot of reddits and subreddits, what about some coding?</h3>
+                <h3>You have read a lot of reddits and subreddits, what about <a href="https://docs.google.com/document/d/1WyXO6XpqAC41hGNJJmx8FTNFecNdGT2bxCNBWgS8OzM/edit?usp=sharing">some coding?</a></h3>
             </section>
             <section>
                 <h2>Are we ready for production, now?</h2>
@@ -1401,7 +1401,7 @@
 
             </section>
             <section>
-                <h3>Talk is cheap, show me the code.</h3>
+                <h3>Talk is cheap, <a href="https://docs.google.com/document/d/1WIsuMqg75mvOL5iBBbBIonbWSWaleYdTBSx-aU3j1mI/edit">show me the code</a>.</h3>
             </section>
             <section>
 
@@ -1570,7 +1570,8 @@
                 </table>
             </section>
             <section>
-                <h3>Go back to coding, this idea will make you appear on the first page of HackerNews.</h3>
+                <h3>Go back to
+                    <a href="https://docs.google.com/document/d/1qZ4y39NUoYSxPpYa6D6RcizKyWO4qZ-3KVWWg-EZt0M/edit?usp=sharing"></a>coding, this idea will make you appear on the first page of HackerNews.</h3>
             </section>
             <section>
                 <h3>This was fun, what's left? What do you think you can do to improve the setup?</h3>
